--- a/util-pb/Cargo.toml
+++ b/util-pb/Cargo.toml
@@ -6,3 +6,16 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+prost = "0.11"
+prost-types = "0.11.2"
+tonic = "0.8"
+
+derive_builder = "0.12.0" #
+sqlx = { version = "0.6", features = ["runtime-tokio-rustls", "postgres", "chrono"] }
+serde = { version = "1", features = ["derive"] }
+chrono = { version = "0.4.19", features = ["serde"] }
+
+
+[build-dependencies]
+tonic-build = "0.8.4"
+proto-builder-trait = "0.5.0"
