--- a/.env
+++ b/.env
@@ -1,2 +1,5 @@
 DATABASE_URL='postgres://localhost:5432/blog'
 TDB_URL='postgres://localhost:5432'
+
+FRONTEND_URL='127.0.0.1:3000'
+BACKEND_URL='127.0.0.1:3001'
