--- a/util-pb/Cargo.toml
+++ b/util-pb/Cargo.toml
@@ -13,6 +13,7 @@ tonic = "0.8"
 derive_builder = "0.12.0" #
 sqlx = { version = "0.6", features = ["runtime-tokio-rustls", "postgres", "chrono"] }
 serde = { version = "1", features = ["derive"] }
+serde_json = "1"
 chrono = { version = "0.4.19", features = ["serde"] }
 
 
