--- a/page-frontend/Cargo.toml
+++ b/page-frontend/Cargo.toml
@@ -6,9 +6,10 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-axum = { version = "0.6.1", features = ["headers"] }
+axum = { version = "0.6", features = ["headers"] }
 axum-macros = "0.3.0"
-tokio = { version = "1.23.0", features = ["full"] }
+tokio = { version = "1.23", features = ["full"] }
+futures = "0.3.25"
 tonic = "0.8"
 tower-http = { version = "0.3", features = ["fs", "trace"] }
 
